# proc_macro_global_state

./: Cargo.toml  README.md
src/: lib.rs
